Home page complete

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
         @apply md:h-14 lg:h-8 lg:bg-gray-300
     }
     .header .faIcons{
-        @apply h-6 p-4 md:h-5 md:p-3 hover:-translate-y-[0.10rem] hover:h-[1.15rem] 
+        @apply w-6 h-6 sm:w-7 sm:h-7 p-4 md:p-3 hover:-translate-y-[0.10rem] hover:h-[1.15rem] 
     }
     .header .page-links{
         @apply space-x-1 sm:space-x-2 md:space-x-1 lg:space-x-0
@@ -114,6 +114,99 @@
         md:max-w-[6rem] md:max-h-[4.8rem]
         lg:max-w-[8rem] lg:max-h-[6rem]
         outline-2 outline-black
+    }
+
+    .projectContainer {
+        @apply border-2 border-black flex justify-center flex-wrap bg-slate-200 min-w-[15rem]
+    }
+    .projectContainer .projectCard{
+        @apply border-2 border-white p-1 m-1 rounded-3xl
+        xss:p-1 xss:m-2 xss:my-2
+        xsm:p-2 xsm:pl-4 inline-block space-y-1 relative
+    }
+    .projectContainer .projectCard .cardBody{
+        @apply border-b-2 border-black mb-2 bg-white rounded-t-3xl
+    }
+    .projectContainer .projectCard .cardBodyBottom{
+        @apply border-b-2 mb-2 bg-gradient-to-r from-slate-400 to-slate-600 rounded-b-3xl text-white 
+    }
+    .projectContainer .projectCard .cardTechsMain{
+        @apply flex list-none space-x-4 text-sm font-semibold
+        xxs:text-sm 
+    }
+    .projectContainer .projectCard .cardTechsOther{
+        @apply flex list-none font-medium text-sm space-x-4 
+    }
+    .projectContainer .projectCard .cardDesc{
+        @apply mx-auto p-2 w-auto tracking-tighter leading-5 text-center break-words
+        xsm:w-96
+    }
+    .cardDescLinks{
+        @apply flex space-x-2 justify-start 
+    }
+
+
+    #popup {
+        @apply w-[15rem] h-[23rem] fixed top-36 left-auto overflow-auto bg-yellow-100 rounded-xl
+        xxs:w-[17.5rem]
+        xsx:w-[21rem]
+        xss:w-[23.5rem]
+        xms:w-[27rem]
+        xsm:w-[30.5rem]
+        sm:w-[37rem]
+        md:md:w-[40rem] 
+    }
+    .popHeading {
+        @apply space-x-4 flex justify-center border-b-2 border-black bg-stone-200 h-16 pt-4
+    }
+    .poptoolTechs {
+        @apply flex list-none flex-wrap space-x-6 m-2
+    }
+    .poptoolTechs li{
+        @apply border rounded-lg px-1 text-base text-white
+        sm:px-2 sm:py-1 md:text-lg bg-orange-500
+    }
+    .popDesc {
+        @apply text-base border-slate-400 border m-2 md:m-4 bg-white p-2 rounded-xl indent-8 whitespace-pre-wrap
+    }
+    #popImages {
+        @apply object-fill
+    }
+    .popImagesimg{
+        @apply  my-1
+    }
+    .popImagesimg img{
+        @apply mx-auto max-w-[13.5rem] xxs:max-w-[16.5rem] xsx:max-w-[20rem] xss:max-w-[22.5rem] xms:max-w-[26rem] xsm:max-w-[29.5rem] sm:max-w-[35.5rem] md:max-w-[37.5rem] rounded-xl
+    }
+
+
+    #achievementContainer{
+        @apply border-2 border-black flex justify-center flex-wrap w-[99%] mx-auto my-4 bg-slate-200 py-4
+    }
+    .achiCard{
+        @apply border border-cyan-300 m-1 min-w-[15rem] w-[16rem] rounded-t-full bg-gradient-to-r from-cyan-50 to-cyan-600
+    }
+    .achiImg{
+        @apply border border-cyan-300 m-1 w-[7rem] h-[7rem] rounded-full mx-auto overflow-hidden 
+    }
+    .achiImg img{
+        @apply mx-auto object-fill w-[7rem] h-[7rem] rounded-full bg-gradient-to-l from-slate-200 to-slate-300
+    }
+    .achiLower {
+        @apply border border-white my-1  flex flex-col space-y-[0.1rem] divide-y text-slate-800 text-sm w-[15.9rem]
+    }
+    .achiPlatform {
+        @apply h-10 p-1 text-center text-lg
+    }
+
+
+
+
+
+
+
+    .footer-links {
+        @apply text-slate-600 hover:text-slate-800 hover:underline decoration-slate-800
     }
 }
 
