--- a/src/index.css
+++ b/src/index.css
@@ -142,7 +142,7 @@
 
 
     #achievementContainer{
-        @apply flex flex-col justify-center flex-wrap mx-auto my-24 py-4 divide-y divide-[#46AEA2]
+        @apply flex flex-col justify-center flex-wrap mx-auto my-24 py-4 divide-y divide-[#46AEA2] border-y-8 border-[#3c887f] rounded-[5rem] 
     }
     .achiCard{
         @apply flex flex-wrap justify-center lg:space-x-10 my-2
@@ -160,8 +160,9 @@
         @apply h-10 p-1 text-center text-lg
     }
 
+
     #photo-about{
-        @apply border bg-slate-800 rounded-[3rem]
+        @apply border border-white bg-[#1d2026] rounded-[3rem]
     }
     #about-img{
         @apply border-white border w-[10rem] h-[10rem] rounded-full overflow-hidden p-1 my-2
@@ -171,7 +172,7 @@
         @apply m-1 text-xs tracking-wide leading-5 xss:text-sm min-w-[16rem] max-w-[26rem] rounded-[3rem] p-2 text-white
     }
     #about-card{
-        @apply border border-yellow-600 w-auto min-w-[16rem] max-w-[22rem] flex space-x-4 p-2 h-fit
+        @apply border-2 overflow-x-auto border-[#46aea2] w-auto min-w-[16rem] max-w-[24rem] flex space-x-4 p-4 h-fit rounded-[3rem]
     }
 
 
@@ -179,13 +180,13 @@
         @apply m-1
     }
     #form input {
-        @apply border border-b-black m-1 py-3 px-2 tracking-widest font-semibold text-[18px] text-blue-500
+        @apply border-b-2 rounded-b-3xl rounded-t-2xl border-b-[#46aea2] m-1 py-3 px-4 tracking-widest font-semibold text-[18px] text-slate-500
         focus:placeholder:text-slate-300 focus:outline-none
         placeholder:text-slate-400 placeholder:font-semibold placeholder:tracking-widest
     }
     #form textarea {
-        @apply border border-b-black m-1 py-2 px-2 tracking-wide font-medium text-base resize-y text-cyan-500 min-h-[6rem]
-        focus:placeholder:text-slate-300 focus:outline-none 
+        @apply border-b-2 rounded-b-3xl rounded-t-2xl border-b-[#46aea2] m-1 py-3 px-4 tracking-wide font-medium text-base resize-y text-slate-400 min-h-[6rem]
+        focus:placeholder:text-slate-300 focus:outline-none  focus:tracking-widest
         placeholder:text-slate-400 placeholder:font-semibold placeholder:tracking-widest
     }
     
