--- a/src/index.css
+++ b/src/index.css
@@ -124,8 +124,8 @@
 
 
     #popup {
-        @apply fixed top-24 z-50 overflow-auto rounded-xl border border-green-300
-        w-[90%] h-[80%] bg-gradient-to-b from-[#1D2026] to-[#f2f2f2]
+        @apply fixed top-24 z-50 overflow-auto rounded-xl border-4 border-black
+        w-[90%] h-[80%] bg-gradient-to-b from-[#1D2026] to-[#f2f2f2] shadow-2xl shadow-white
     }
     .popHeading {
         @apply space-x-4 flex justify-center border-b-2 border-black bg-[#f2f2f2] h-16 pt-4
@@ -138,7 +138,7 @@
         sm:px-2 sm:py-1 md:text-lg bg-[#05a996] transition-all ease-in-out duration-150 hover:bg-[#158f81]
     }
     .popDesc {
-        @apply text-base border-slate-400 border m-2 md:m-4 bg-white p-2 rounded-xl indent-8 whitespace-pre-wrap font-diphel
+        @apply text-sm border-slate-400 border m-2 md:m-4 bg-white p-2 rounded-xl indent-8 whitespace-pre-wrap font-pathway
     }
     #popImages {
         @apply object-fill w-[80%] mx-auto overflow-hidden
